# git-open-remote

./: .gitignore  .tool-versions  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
src/: lib.rs  main.rs
tests/: cli_test.rs
