[package]
name = "git-open-remote"
version = "0.1.0"
authors = ["Jonathan Knapp <jon@coffeeandcode.com>"]
homepage = "https://github.com/CoffeeAndCode/git-open-remote"
description = "Cli helper to quickly open git remote origin url in a browser"
repository = "https://github.com/CoffeeAndCode/git-open-remote"
documentation = "https://github.com/CoffeeAndCode/git-open-remote"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "CoffeeAndCode/git-open-remote" }

[features]
fail-on-warnings = []

[dependencies]
open = "1.2"

[dev-dependencies]
assert_cmd = "0.10"
